<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="6dp"
    android:elevation="6dp"
    app:cardBackgroundColor="@android:color/white"
    android:layout_margin="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:id="@+id/sn"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/s_n"
            android:textColor="@color/black"
            android:gravity="center"
            />


        <TextView
            android:layout_weight="25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/inviteeNameTV"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textStyle="bold"
            android:textColor="@color/black"

            />

        <TextView
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:id="@+id/invitationStatusTV"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/purple_700"
            />

        <ImageButton
            android:id="@+id/wishMessage"
            android:layout_weight="05"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_message_24"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:visibility="invisible"
            />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/inviteeUrlTV"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="45"
            android:textColor="@color/black"
            android:text="@string/url" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:gravity="center">

            <ImageButton
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/share"
                android:id="@+id/shareBTN"
                android:src="@drawable/share"
                android:layout_width="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>